--- a/src/app.scss
+++ b/src/app.scss
@@ -1,17 +1,23 @@
 /* TO DO 
 _adding a bigger space-between among vars?
-_credits for gem font-awesome image
 _condense contacts and headerContacts in js
 _add partials (@import _colors, _mixins)
+_narrower width (wrapper min-w and procedures width)?
 _refactoring
+*/
+
+/* CREDITS
+The image of the gem comes from the website
+ https://fontawesome.com/icons/gem?style=regular 
+ and it is released under CC BY 4.0.
 */
 
 /* VAR & MIXINS */
 // text and buttons
 $primary-light-color: white; 
-$primary-dark-color: #C0C3D1; // #69696D; 
-$secondary-light-color: #DAECED; // #719a9c; 
-$secondary-mid-color: #41c457; // #028484;
+$primary-dark-color: #C0C3D1; 
+$secondary-light-color: #DAECED;
+$secondary-mid-color: #41c457;
 $complementary-secondary-mid-color: #FFFFFF;
 $secondary-dark-color: rgba(2, 132, 132, 0.3);
 
@@ -21,7 +27,7 @@ $small-font-size: 0.8rem;
 // layout
 $background-light-color: white; 
 $background-dark-primary-color: #121117; 
-$background-dark-secondary-color: #191C1E; // !! secondo me è #19191F
+$background-dark-secondary-color: #191C1E;
 
 $space-between-section-elements: 15px;
 
