--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,6 @@
 /* TO DO 
 _adding a bigger space-between among vars?
 _add partials (@import _colors, _mixins)
-_narrower width (wrapper min-w and procedures width)?
 _refactoring
 */
 
@@ -24,6 +23,8 @@ $primary-font-size: 0.9rem;
 $small-font-size: 0.8rem;
 
 // layout
+$desktop-width: 1200px;
+
 $background-light-color: white; 
 $background-dark-primary-color: #121117; 
 $background-dark-secondary-color: #191C1E;
@@ -165,7 +166,7 @@ h3.subsection-title {
 
 /* STYLE */
 .wrapper {
-    min-width: 1400px;
+    min-width: $desktop-width;
 }
 
 // _header
@@ -464,11 +465,11 @@ main {
         }
         
         .third-section {
-            width: 1400px;
+            width: $desktop-width;
             margin: 0 auto;
             
             .description-container {
-                width: 800px;
+                width: 700px;
                 margin: 0 auto $space-between-section-elements;
                 text-align: center;
 
@@ -483,7 +484,7 @@ main {
                 margin-top: 40px;
 
                 .procedure {
-                    width: 13%;
+                    width: 14%;
                     text-align: center;
 
                     .number-container {
